--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,20 +19,20 @@ jobs:
         distribution: 'corretto'
         java-version: '17'
 
-    - name: create application.yml
+    - name: create application-secret.yml
       run: |
-        ## create application.yml
+        ## create application-secret.yml
         ## mkdir ./src/main/resources
         cd ./src/main/resources
 
         # application.yml 파일 생성
-        # touch ./application.yml
+        touch ./application-secret.yml
 
         # GitHub-Actions 에서 설정한 값을 application.yml 파일에 쓰기
-        # echo "${{ secrets.CI_APPLICATION }}" >> ./application.yml
+        # echo "${{ secrets.CI_APPLICATION }}" >> ./application-secret.yml
         
         # application.yml 파일 확인
-        cat ./application.yml
+        cat ./application-secret.yml
       shell: bash
       
     - name: build
