--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: create application-secret.yml
       run: |
-        ## create application-secret.yml
-        ## mkdir ./src/main/resources
+        # create application-secret.yml
+        # mkdir ./src/main/resources
         cd ./src/main/resources
 
         # application.yml 파일 생성
