--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,7 @@ jobs:
         touch ./application-secret.yml
 
         # GitHub-Actions 에서 설정한 값을 application-secret.yml 파일에 쓰기
-        # echo "${{ secrets.CI_APPLICATION }}" >> ./application-secret.yml
+        echo "${{ secrets.CI_APPLICATION }}" >> ./application-secret.yml
         
         # application.yml 파일 확인
         cat ./application-secret.yml
