--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,7 @@ jobs:
         # application-secret.yml 파일 생성
         touch ./application-secret.yml
 
-        # GitHub-Actions 에서 설정한 값을 application-secret.yml 파일에 쓰기
+        # GitHub-Actions 에서 설정한 값을 application-secret.yml 파일에 쓰기..git
         echo "${{ secrets.CI_APPLICATION }}" >> ./application-secret.yml
         
         # application.yml 파일 확인
