--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,20 +18,18 @@ spring:
         auto_quote_keyword: true
   data:
     redis:
-      host: redis
+      host: localhost
       port: 6379
   mail:
     host: smtp.gmail.com
-    port: 465
+    port: 587
     username: ${MAIL.username}
     password: ${MAIL.password}
+
     properties:
       mail:
         smtp:
-          address: "hello.wer.tiki"
-          personal: "TIKI"
           auth: true
-          timeout: 5000
           starttls:
             enable: true
 
@@ -45,7 +43,9 @@ logging:
 jwt:
   secret:
     ${JWT.SECRET}
-
+mail:
+  password:
+    ${MAIL.password}
 aws-property:
   access-key: ${AWS_PROPERTY.ACCESS_KEY}
   secret-key: ${AWS_PROPERTY.SECRET_KEY}
