--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ spring:
         auto_quote_keyword: true
   data:
     redis:
-      host: localhost
+      host:  ${REDIS.host}
       port: 6379
   mail:
     host: smtp.gmail.com
@@ -43,6 +43,7 @@ logging:
 jwt:
   secret:
     ${JWT.SECRET}
+
 aws-property:
   access-key: ${AWS_PROPERTY.ACCESS_KEY}
   secret-key: ${AWS_PROPERTY.SECRET_KEY}
