--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,28 @@ services:
       - "6379:6379"
     networks:
       - tiki-network
+  blue:
+    container_name: blue
+    image: hellotiki/dev
+    expose:
+      - 8080
+    ports:
+      - "8080:8080"
+    environment:
+      - TZ=Asia/Seoul
+    depends_on:
+      - redis
+  green:
+    container_name: green
+    image: hellotiki/dev
+    expose:
+      - 8080
+    ports:
+      - "8081:8080"
+    environment:
+      - TZ=Asia/Seoul
+    depends_on:
+      - redis
 networks:
   tiki-network:
     external: true
