[FIX] 도커 컴포즈 redis 이미지 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   redis:
     container_name: redis
-    image: alpine
+    image: redis:alpine
     hostname: redis
     ports:
       - "6379:6379"
