[FEAT] 스케줄러 부분 구현

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -20,6 +20,10 @@ spring:
     redis:
       host: ${REDIS.host}
       port: 6379
+  task:
+    scheduling:
+      pool:
+        size: 1
   mail:
     host: smtp.gmail.com
     port: 587
