--- a/.github/workflows/DOCKER-CD.yml
+++ b/.github/workflows/DOCKER-CD.yml
@@ -37,7 +37,7 @@ jobs:
         shell: bash
 
 
-      - name: docker 로그인
+      - name: docker build 환경 설정
         uses: docker/setup-buildx-action@v2.9.1
 
       - name: login docker hub
