--- a/.github/workflows/PROD-CD.yml
+++ b/.github/workflows/PROD-CD.yml
@@ -1,4 +1,4 @@
-name: DOCKER-CD
+name: PROD-CD
 on:
   push:
     branches: [ "main" ]
@@ -35,11 +35,10 @@ jobs:
         working-directory: ${{ env.working-directory }}
         shell: bash
 
-
       - name: docker build 환경 설정
         uses: docker/setup-buildx-action@v2.9.1
 
-      - name: login docker hub
+      - name: docker hub 로그인
         uses: docker/login-action@v2.2.0
         with:
           username: ${{ secrets.DOCKER_LOGIN_USERNAME_PROD }}
