--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -27,8 +27,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL.username.dev}
-    password: ${MAIL.password.dev}
+    username: ${MAIL.username}
+    password: ${MAIL.password}
 
     properties:
       mail:
