--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -27,8 +27,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL.username.prod}
-    password: ${MAIL.password.prod}
+    username: ${MAIL.username}
+    password: ${MAIL.password}
 
     properties:
       mail:
