--- a/.github/workflows/DOCKER-CD.yml
+++ b/.github/workflows/DOCKER-CD.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: docker image 빌드 및 푸시
         uses: docker/build-push-action@v4
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         with:
           context: .
           file: ./Dockerfile-Dev
