--- a/.github/workflows/PROD-CI.yml
+++ b/.github/workflows/PROD-CI.yml
@@ -34,6 +34,8 @@ jobs:
         shell: bash
 
       - name: build
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         run: |
           chmod +x gradlew
           ./gradlew build -x test
